cks/registry/permitted-registry-policy.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: permitted-registry.4linux.example
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  validations:
  - expression: >
      object.spec.containers.all(
        c, c.image.startsWith('registry:5000/')
      )
    message: "Somente imagens do registro registry:5000 são permitidas."
  - expression: >
      !has(object.spec.initContainers) ||
      object.spec.initContainers.all(
        c, c.image.startsWith('registry:5000/')
      )
    message: "InitContainers também devem utilizar registry:5000."
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: permitted-registry.4linux.example
spec:
  policyName: permitted-registry.4linux.example
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchLabels:
        supply-chain-security: protected
